--- a/TravelExpertsMVC/Views/Home/About.cshtml
+++ b/TravelExpertsMVC/Views/Home/About.cshtml
@@ -38,10 +38,10 @@
 
                 Travel with passion. Travel with expertise. Travel with TravelExperts.
                 </p>
-                <button class="btn-about mb-5">Learn More</button>
+            <a href="/home/offers" class="btn btn-about mb-5">See Our Offers</a>
             </div>
             <div class="home-register-img col-md-6 col-sm-12">
-                <img src="~/Images/travel-world.jpg" class="img-fluid" />
+                <img src="~/Images/Travel_tourism.jpg" class="img-fluid" style="width: 140%;" /> 
             </div>
         </div>
     </section>
