--- a/TravelExpertsMVC/Views/Account/Register.cshtml
+++ b/TravelExpertsMVC/Views/Account/Register.cshtml
@@ -53,6 +53,11 @@
                 <span asp-validation-for="CustProv" class="text-danger"></span>
             </div>
             <div class="form-group mb-3">
+                <label asp-for="CustCountry" class="control-label">Country</label>
+                <input asp-for="CustCountry" class="form-control" />
+                <span asp-validation-for="CustCountry" class="text-danger"></span>
+            </div>
+            <div class="form-group mb-3">
                 <label asp-for="CustHomePhone" class="control-label">Home Phone</label>
                 <input asp-for="CustHomePhone" class="form-control" />
                 <span asp-validation-for="CustHomePhone" class="text-danger"></span>
